--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
     "install": "^0.13.0",
     "npm": "^10.2.5",
     "react": "^18.2.0",
