--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.18.0",
     "install": "^0.13.0",
     "npm": "^10.2.5",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.1",
+    "sass": "^1.69.7",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
