--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.21.2",
     "sass": "^1.69.7",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-slick": "^0.23.13",
